Fix POST request

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <input name="phoneNumber" type="phone" class="form-control" id="phone" placeholder="Teléfono">
                         </div>
                             <div class="form-group">
-                            <label for="call">¿Agendar llamada? <input id="callMe" name="callMe" type="checkbox"/></label>
+                            <label for="call">¿Agendar llamada? <input id="callMe" name="callMe" type="checkbox" data-unchecked-value="false" /></label>
                         </div>
     
                         <div class="form-group time-call">
@@ -179,17 +179,22 @@
     <script src="assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.serializejson.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <script>
-
-
 
         $(document).ready(function () {
             // Checbox
             $('.time-call').hide();
             $('#callMe').change(function() {
-                this.checked ? $('.time-call').show() : $('.time-call').hide();
+                if (this.checked) {
+                    $('.time-call').show();
+                    $(this).prop("value", "true");
+                } else {
+                    $('.time-call').hide();
+                    $(this).prop("value", "false");
+                }
             });
 
             //Hours
@@ -248,17 +253,24 @@
                 submitHandler: function(form, event) {
                     event.preventDefault();
 
-                    let formData = $('#contact').serialize();
+                    let formData = JSON.stringify($('#contact').serializeJSON({
+                        checkboxUncheckedValue: 'NOPE', 
+                        parseBooleans: true, 
+                        parseNumbers: true
+                    }));
                     $.ajax({
                         url: 'https://appointment.photocapture.io/appointment/register',
-                        method: 'POST',
+                        type: 'POST',
                         data: formData,
+                        dataType: 'json',
                         contentType : 'application/json',
                         beforeSend: function(xhr) {
                             xhr.setRequestHeader('Content-Type', 'application/json; charset=utf8');
                         },
                     }).done(function(response){ //
-                        console.log('Response', response)
+                        console.log('Response', response);
+                    }).fail(function(response){
+                        console.log('Error', response);
                     });
                 }
             });
