Agregada librería para captcha

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <textarea class="form-control" name="message" placeholder="Comentario"></textarea>
                         </div>
 
-                        <div class="g-recaptcha" data-sitekey="6LeOA6cZAAAAAI4OgYucadSvDCxW4ff2F9HH4zJj"></div>
+                        <div class="g-recaptcha" style="width: 100%" data-sitekey="6LeOA6cZAAAAAI4OgYucadSvDCxW4ff2F9HH4zJj"></div>
 
                         <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
@@ -187,6 +187,7 @@
     <script src="assets/js/main.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <script>
 
         $(document).ready(function () {
