--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                             <textarea class="form-control" name="message" placeholder="Comentario">Comentario de ejemplo</textarea>
                         </div>
 
-                        <!-- <div style="padding-bottom: 15px">
+                        <div style="padding-bottom: 15px">
                             <div class="g-recaptcha" style="width: 100%" data-sitekey="6LeOA6cZAAAAAI4OgYucadSvDCxW4ff2F9HH4zJj"></div>
-                        </div> -->
+                        </div>
 
                         <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
@@ -171,9 +171,6 @@
 
     <div class="modal fade modal-success" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-dialog-centered modal-dialog" role="document">
-            <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="padding: 10px; cursor: pointer">
-                <span aria-hidden="true">×</span>
-            </button> -->
             <div class="modal-content">
                 <div class="modal-header" style="border: 0">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
