--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                             xhr.setRequestHeader('Content-Type', 'application/json; charset=utf8');
                         },
                     }).done(function(response){ //
-                        let status = response.status;
+                        let status = response.statusCode;
                         if (status == 200) {
                             $('.modal-success').modal('show')
                             $('input[type="name"]','#contact').val('');
